src/program/latex/snapshots/quil_rs__program__latex__tests__settings__settings_texify_numerical_constants_false_supported_symbol.snap
---
source: src/program/latex/mod.rs
assertion_line: 1064
expression: "r\"\\documentclass[convert={density=300,outext=.png}]{standalone}\n\\usepackage[margin=1in]{geometry}\n\\usepackage{tikz}\n\\usetikzlibrary{quantikz}\n\\begin{document}\n\\begin{tikzcd}\n\\lstick{\\ket{q_{0}}} & \\ctrl{1} & \\qw \\\\\n\\lstick{\\ket{q_{1}}} & \\phase{\\text{alpha}} & \\qw\n\\end{tikzcd}\n\\end{document}\""
---
\documentclass[convert={density=300,outext=.png}]{standalone}
\usepackage[margin=1in]{geometry}
\usepackage{tikz}
\usetikzlibrary{quantikz}
\begin{document}
\begin{tikzcd}
\lstick{\ket{q_{0}}} & \ctrl{1} & \qw \\
\lstick{\ket{q_{1}}} & \phase{\text{alpha}} & \qw
\end{tikzcd}
\end{document}
